<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Twitta</string>
    
    <string name="direct_messages">Direct Messages</string>
    <string name="post_picture">Post picture</string>
    
    <string name="username_label">Username:</string>    
    <string name="password_label">Password:</string>
    <string name="signin">Sign-In!</string>
    
    <string name="signout">Sign out</string>
    <string name="refresh">Refresh</string>
    <string name="preferences">Preferences</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="replies">\@Replies</string>
    <string name="dm">DM</string>
    <string name="tweets">Tweets</string>
    <string name="show_at_replies">Show @replies</string>
    <string name="show_all">Show all</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>

    <string name="replies_only_title">Only @replies?</string>
    <string name="replies_only_summary">Notify only of @replies</string>

    <string name="pref_check_updates_title">Enable notifications?</string>
    <string name="pref_check_updates_summary">Check for new tweets and DMs when application is not running</string>

    <string name="pref_check_updates_interval_title">Update check interval</string>
    <string name="pref_check_updates_interval_summary">Minutes between checks for new tweets</string>
        
    <string name="pref_check_updates_interval_dialog_title">Interval in minutes:</string>
    
    <string name="pref_check_updates_interval_default">60</string>
    
    <string name="new_twitter_updates">New Twitter updates</string>
    <string name="x_new_tweets">{0} new tweets</string>
    <string name="new_twitter_dms">New Twitter DMs</string>    
    <string name="x_new_dms">{0} new DMs</string>    
    
    <string name="reply">Reply</string>
    <string name="retweet">Retweet</string>
    <string name="delete">Delete</string>
                
    <string name="vibrate_title">Vibrate?</string>
    <string name="vibrate_summary">Vibrate the phone when notified of new tweets</string>

    <string name="pref_ringtone_title">Choose notification ringtone</string>
    <string name="pref_ringtone_summary"></string>
    
    <string name="about_title">About Twitta</string>
    <string name="about_message">
    We put the twee in Twitter
    \n\nTwitta is not endorsed by Twitter.
    \n\nTwitta is open sourced under the Apache 2.0 license. 
    \n\nPlease visit the project page at http://code.google.com/p/twitta/ to contribute code or report issues.
    </string>

    <string name="cool">Cool</string>
    
    <string name="preferences_notifications">Notifications</string>
    
</resources>
