<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

   <CheckBoxPreference  
            android:key="check_updates"  
            android:defaultValue="false"
            android:title="@string/pref_check_updates_title"
            android:summary="@string/pref_check_updates_summary"
            />  

   <ListPreference  
            android:key="check_update_interval"
            android:dependency="check_updates"  
            android:defaultValue="@string/pref_check_updates_interval_default"
            android:title="@string/pref_check_updates_interval_title"  
            android:summary="@string/pref_check_updates_interval_summary"
            android:entries="@array/check_intervals"
            android:entryValues="@array/check_intervals"
            android:dialogTitle="@string/pref_check_updates_interval_dialog_title"                        
            />  

   <CheckBoxPreference  
            android:key="vibrate"
            android:dependency="check_updates"  
            android:defaultValue="false"
            android:title="@string/vibrate_title"
            android:summary="@string/vibrate_summary"
            />  

</PreferenceScreen>